Fixed issue: nav footer overflow now full vw; overflow hidden x

--- a/style.css
+++ b/style.css
@@ -34,16 +34,18 @@ html {
   font-weight: 400;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 body {
   flex: auto;
   min-height: 100vh;
-  max-width: 1200px;
   background-color: var(--background);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  overflow-x: hidden; /*workaround for time being*/
 }
 
 /*===============
@@ -87,6 +89,14 @@ p {
 
 ul {
   list-style: none;
+}
+
+/*==================
+  nav footer width
+====================*/
+nav,
+footer {
+  width: calc(100vw - 17px);
 }
 
 /*================
